# contact_dynamics

./: .gitignore
dart_related/: CMakeLists.txt  README.md  ball_path_visualization.cpp  bouncingBall.cpp  training_example_extraction.cpp
dart_related/common/: ContactMode.h
dart_related/util/: CMakeLists.txt  CSVParser.h  CircularBuffer.h  ContactModeAnnotator.h  Rand.h  Reporter.h
training_examples/: ex0.txt  ex1.txt  ex2.txt
v1_xgboost_model/: 4-0.01-200.raw.txt  4-0.015-500.model  5-0.005-500.model  5-0.005-500.raw.txt  5-0.01-200.model  5-0.01-200.raw.txt  5-0.025-200.model  5-0.025-200.raw.txt  basic_xgboost_model.py  data_reshape.py  predict_res.raw_data.txt  predict_std.raw_data.txt  train_logs.txt  xgboost_model_label.py  xgboost_model_label_predict.py  xgboost_model_plotter.py
v1_xgboost_model/models_label/: 5-0.1-50-label.model  5-0.1-50-label.raw.txt  8-0.1-100-label.model  8-0.1-100-label.raw.txt  8-0.1-20-label.model  8-0.1-20-label.raw.txt  8-0.2-10-label.model  8-0.2-10-label.raw.txt
v1_xgboost_model/models_y_acc/: 4-0.01-200.model  4-0.015-500.raw.txt  4-0.05-200.model  4-0.05-200.raw.txt
v1_xgboost_model/training_data/: contact_mode_label.predict
